# lombokrs

./: Cargo.toml  README.md  _typos.toml  publish.cmd  publish.sh
.github/workflows/: rust.yml
crates/codegen/: Cargo.toml  README.md
crates/codegen/src/: builder.rs  getter.rs  lib.rs  setter.rs
crates/codegen/src/syntax/: parser.rs
crates/lombok/: Cargo.toml  README.md
crates/lombok/src/: lib.rs
tester/hello-lombok/: Cargo.toml
tester/hello-lombok/src/: lib.rs  main.rs  tests.rs
